--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="zh-cn">
 <head>
     <meta http-equiv="Content-Type" content="text/html" charset="utf-8" />
@@ -44,10 +44,20 @@
         <h4>School of Mathematical Sciences, USTC</h4>
         <hr />
         <div class="rich_media_inner"> 
-            <p>Welcome to Xiaoxiang's homepage! In this homepage, you're welcomed to see my notes in <a href="https://github.com/ramified">GitHub</a> or <a href="web/English/toynotes-Eng.html">here(bachelor works)</a>.</p>
-            <p>My <a href="https://github.com/ramified/master_thesis/raw/main/master_thesis_Xiaoxiang_Zhou.pdf">master thesis</a> and preprint: <a href="https://arxiv.org/abs/2206.00444">Affine Pavings of Quiver Flag Varieties</a>.</p>
+
+            <p>Welcome to my homepage! </p>
+
+            <h5>Research project, Thesis and Preprint</h5>
+            <p>Preprint: <a href="https://arxiv.org/abs/2206.00444">Affine Pavings of Quiver Flag Varieties</a>. See the <a href="https://github.com/ramified/master_thesis/raw/main/talk_40min/talk_zxx_affine_pavings.pdf">slide</a> and the <a href="http://home.ustc.edu.cn/~xx352229/webversion/webcard.html">card game</a>.</p>
+            <p>Master thesis: <a href="https://github.com/ramified/master_thesis/raw/main/master_thesis_Xiaoxiang_Zhou.pdf">Geometry of Quiver Flag Varieties</a></p>
+            <p>Bachelor Thesis: <a href="https://github.com/ramified/personal_tex_collection/raw/main/bachelor_thesis/thesis/main.pdf">Modular form and Equations of degree 5</a></p>
+            <p>Undergraduate Research Program: <a href="https://github.com/ramified/personal_tex_collection/raw/main/Mordell_theorem/MordellThm/MordellTheorem.pdf">The theory of the Elliptic Curve</a> </p>
+
+            <h5>Notes</h5>
+            <p>In this homepage, you're welcomed to see my notes in <a href="https://github.com/ramified">GitHub</a> or <a href="web/English/toynotes-Eng.html">here(bachelor works)</a>.</p>
             <p>Some informations about the "<a href="web/main/newprogram.html">eine Woche, ein Beispiel</a>". </p>
-            <p>See My <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/CV-web.pdf">CV</a> and <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/Transcript_of_Records.pdf">Transcript of records</a> (last updated: Feb 23th, 2023)</p>
+            <h5>Personal information</h5>
+            <p>See My <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/CV-web.pdf">CV</a>, <a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/Transcript_of_Records.pdf">transcript of records</a> and <a href="https://github.com/ramified/personal_tex_collection/raw/main/research_statement/research_statement.pdf">research statement</a> (last updated: Mar 25th, 2023)</p>
         </div>
         <div class="center"><canvas id="c"></canvas></div>
     </main>
@@ -77,7 +87,7 @@
         margin-right: auto;
         flex-direction: column;
         align-items: center;
-        
+
     }
 }
 
@@ -95,6 +105,7 @@
 <script type="module">
     import * as THREE from 'three';
     import {OrbitControls} from 'three/addons/controls/OrbitControls.js';
+    // import { PointerLockControls } from 'three/examples/jsm/controls/PointerLockControls';
     import {GUI} from 'three/addons/libs/lil-gui.module.min.js';
     // import { MeshLine, MeshLineMaterial, MeshLineRaycast } from 'threemeshline';
 
