--- a/webversion/webcard.html
+++ b/webversion/webcard.html
@@ -1,3 +1,5 @@
+
+
 <!DOCTYPE html>
 <html>
 <head>
@@ -5,17 +7,26 @@
   <title>Webcard</title>
 </head>
 <body>
-  <p>This is my card game. It is still bad-behaved. See the <a href="test3.html">ideal states</a>. <a href="webcard2.html">some temparory replacement</a>. </p>
-  <p>This card game can generate different Auslander-Reiten quivers. Drag bottons to see the effect.</p>
-  <canvas id="myCanvas" width="1300" height="700"></canvas>
+  <p>This is my card game. It is still bad-behaved. See the <a href="test3.html">ideal states</a> and <a href="webcard3.html">a failed try to make it draggable</a>. It does not support any smartphones or tablets (since I'm lazy).</p>
+  <!-- https://shopify.github.io/draggable/ Try this?-->
+  <p>This card game allows you to generate different Auslander-Reiten quivers. To manipulate the quiver, simply click and drag the colored dots. Please note that the drag distance for vertical manipulation is relatively long compared to the horizontal drag distance.</p>
+  <p>Enjoy the game and have fun exploring different Auslander-Reiten quivers!</p>
+
+
+
+  <p id="myParagraph">This produces a AR-quiver. The original quiver is here: </p>
+  <canvas id="myCanvas2" width="250" height="75"></canvas>
+  <canvas id="myCanvas" width="1300" height="1400"></canvas>
 
   <script>
 
     const canvas = document.getElementById('myCanvas');
     const ctx = canvas.getContext('2d');
+    const canvas2 = document.getElementById('myCanvas2');
+    const ctx2 = canvas2.getContext('2d');
+    let dragging = 0;
 
-
-
+    let rect = canvas.getBoundingClientRect();
     let offsetX = 0;
     let offsetY = 0;
 
@@ -55,10 +66,10 @@
 
 const edgeLength = 30;
 let cards = [
-{source: "card_ext_png1.png", x: 60, y: 70, width: 10, height: 10, xsq:278, ysq:263, color:'red'},
-{source: "card_ext_png2.png", x: 60, y: 70, width: 10, height: 10, xsq:278+111.3-edgeLength, ysq:263, color:'orange'},
-{source: "card_ext_png3.png", x: 60, y: 70, width: 10, height: 10, xsq:278+111.3*2+edgeLength, ysq:263, color:'yellow'},
-{source: "card_ext_png4.png", x: 60, y: 70, width: 10, height: 10, xsq:278+111.3*3, ysq:263-edgeLength, color:'green'},
+{source: "card_ext_png1.png", x: 60, y: 70, idx: 0, idy: 0, width: 10, height: 10, xsq:278, ysq:263, color:'red'},
+{source: "card_ext_png2.png", x: 60, y: 70, idx: 0, idy: 0, width: 10, height: 10, xsq:278+111.3-edgeLength, ysq:263, color:'orange'},
+{source: "card_ext_png3.png", x: 60, y: 70, idx: 0, idy: 0, width: 10, height: 10, xsq:278+111.3*2+edgeLength, ysq:263, color:'yellow'},
+{source: "card_ext_png4.png", x: 60, y: 70, idx: 0, idy: 0, width: 10, height: 10, xsq:278+111.3*3, ysq:263-edgeLength, color:'green'},
 ];
 
       // Initial drawing
@@ -66,6 +77,8 @@ let cards = [
       cards.forEach(card => {
         drawCard(card); // draw the card
       });
+      checkCondition();
+      dragHere();
 
 // Draw an image on the canvas
 function drawImageWithAspectRatio(ctx, img, x, y, width) {
@@ -75,8 +88,9 @@ function drawImageWithAspectRatio(ctx, img, x, y, width) {
 
 // Draw a card and a square with color on the canvas
 function drawCard(card) {
-        ctx.fillStyle = card.color; // set the fill color to blue
+        ctx.fillStyle = card.color; // set the fill color to the color of the card
         ctx.fillRect(card.x+card.xsq, card.y+card.ysq, card.width, card.height);
+
         // Create a new image object
         const img = new Image();
 
@@ -91,19 +105,46 @@ function drawCard(card) {
 
 // Check if a point is inside a square
 function isInsideSquare(x, y, card) {
-  return x >= card.x+card.xsq && x <= card.x+card.xsq + card.width && y >= card.y+card.ysq && y <= card.y+card.ysq + card.height;
-}
+  // alert("x:" + x + "  card.x+card.xsq:" + (card.x+card.xsq) + (card.x+card.xsq && x <= card.x+card.xsq + card.width));
+    // alert("y:" + y + "  card.y+card.ysq:" + (card.y+card.ysq) + (y >=  card.y+card.ysq && y <= card.y+card.ysq + card.height));
+    return x >= card.x+card.xsq && x <= card.x+card.xsq + card.width && y >= card.y+card.ysq && y <= card.y+card.ysq + card.height;
+  }
+
+
+
+// Add an event listener to the canvas
+canvas.addEventListener("mousemove", function(event) {
+  rect = canvas.getBoundingClientRect();
+  offsetX = event.clientX - rect.left;
+  offsetY = event.clientY - rect.top;
+  let cursorStyle = "default";
+  if(dragging){
+    cursorStyle="move";
+  } else {
+    for (let i = 0; i < cards.length; i++) {
+      const card = cards[i];
+      // alert(offsetY);
+      if (isInsideSquare(offsetX, offsetY, card)) {
+        cursorStyle="grab";
+      }
+    }
+  }
+  canvas.style.cursor=cursorStyle;
+})
+
 
 // Add event listeners for mouse down events on the canvas
 
 canvas.addEventListener('mousedown', function(event) {
-  const rect = canvas.getBoundingClientRect();
-  const offsetX = event.clientX - rect.left;
-  const offsetY = event.clientY - rect.top;
+  rect = canvas.getBoundingClientRect();
+  offsetX = event.clientX - rect.left;
+  offsetY = event.clientY - rect.top;
+  // canvas.style.cursor="pointer";
 
   for (let i = 0; i < cards.length; i++) {
     const card = cards[i];
     if (isInsideSquare(offsetX, offsetY, card)) {
+      dragging=1;
       let startX = card.x - event.clientX;
       let startY = card.y - event.clientY;
 
@@ -112,18 +153,23 @@ canvas.addEventListener('mousedown', function(event) {
         const y = event.clientY - rect.top;
         card.x = x + startX + rect.left;
         card.y = y + startY + rect.top;
-              redrawCanvas();
+              // redrawCanvas();
 //Here is the problem.I redrawCanvas for so much time, and the problem emerges;
-            }
+}
 
-            function onMouseup() {
-              const gridCoordinate = {
-                x: Math.round((card.x - gridOffset.x) / gridSize.x) * gridSize.x + gridOffset.x,
-                y: Math.round((card.y - gridOffset.y) / gridSize.y) * gridSize.y + gridOffset.y,
-              };
-              card.x = gridCoordinate.x;
-              card.y = gridCoordinate.y;
-              redrawCanvas();
+function onMouseup() {
+  dragging=0;
+  card.idx = Math.round((card.x - gridOffset.x) / gridSize.x);
+  card.idy = Math.round((card.y - gridOffset.y) / gridSize.y);
+  const gridCoordinate = {
+    x: card.idx * gridSize.x + gridOffset.x,
+    y: card.idy * gridSize.y + gridOffset.y,
+  };
+  card.x = gridCoordinate.x;
+  card.y = gridCoordinate.y;
+  redrawCanvas();
+              // alert("Why is that alert before the redraw?");
+              checkCondition();
               document.removeEventListener('mousemove', onMousemove);
               document.removeEventListener('mouseup', onMouseup);
             }
@@ -143,8 +189,128 @@ canvas.addEventListener('mousedown', function(event) {
         drawGrid(); // Move this here to redraw the grid every time
         cards.forEach(card => drawCard(card));
         // drawImageWithAspectRatio(ctx, img, 0, 0, 900);
-        
       }
-    </script>
-  </body>
-  </html>
+
+
+
+//New function: get relative place and give an original-quiver.
+
+function checkCondition() {
+  const v1 = cards[0].idx;
+  const v2 = cards[1].idx;
+  const v3 = cards[2].idx;
+  const v4 = cards[3].idx; 
+
+
+  const a = v1-v2;
+  const b = v1-v3;
+  const c = v1-v4;
+  var paragraph = document.getElementById("myParagraph");
+  const allIdsSame = cards.every((card, index, arr) => card.idy === arr[0].idy);
+  drawDynkinD4(ctx2, 100, 60, 1, 10, 50);
+  if ((2*a-1)**2 + (2*b-1)**2 + (2*c-1)**2 === 3 && allIdsSame) {
+    paragraph.textContent = "This is an AR-quiver. The original quiver is here:";
+    drawArrow(ctx2, 100, 60, 1, 10, 50, a, b, c);
+      // alert("success!");
+    } else {
+      paragraph.textContent = "This is not an AR-quiver.";
+    }
+  }
+
+  function drawArrowhead(ctx, fromX, fromY, toX, toY, color) {
+  // set arrow properties
+  ctx.strokeStyle = color;
+  ctx.lineWidth = 2;
+  ctx.fillStyle = color;
+
+  // // draw line from start to end point
+  // ctx.beginPath();
+  // ctx.moveTo(fromX, fromY);
+  // ctx.lineTo(toX, toY);
+  // ctx.stroke();
+
+  // calculate angle of arrow
+  var angle = Math.atan2(toY - fromY, toX - fromX);
+  const headlength = 10;
+  // draw arrowhead
+  ctx.beginPath();
+  ctx.moveTo(toX, toY);
+  ctx.lineTo(toX - headlength * Math.cos(angle - Math.PI / 6), toY - headlength * Math.sin(angle - Math.PI / 6));
+  ctx.lineTo(toX - headlength * Math.cos(angle + Math.PI / 6), toY - headlength * Math.sin(angle + Math.PI / 6));
+  ctx.closePath();
+  ctx.fill();
+}
+
+function drawDynkinD4(ctx, x, y, scale, disc, length) {
+  ctx.clearRect(0, 0, canvas.width, canvas.height);
+  // set properties
+  ctx.strokeStyle = "black";
+  ctx.lineWidth = 2;
+  
+  const disc2=length-disc;
+  // draw edges
+  ctx.beginPath();
+  ctx.moveTo(x - disc * scale, y);
+  ctx.lineTo(x - disc2 * scale, y);
+  ctx.moveTo(x + disc * scale, y);
+  ctx.lineTo(x + disc2 * scale, y);
+  ctx.moveTo(x , y - disc * scale);
+  ctx.lineTo(x , y - disc2 * scale);
+  ctx.stroke();
+
+
+ // draw circles
+ ctx.beginPath();
+ ctx.arc(x, y, 3 * scale, 0, 2 * Math.PI);
+ ctx.moveTo(x + length * scale, y);
+ ctx.arc(x + length * scale, y, 3 * scale, 0, 2 * Math.PI);
+ ctx.moveTo(x - length * scale, y);
+ ctx.arc(x - length * scale, y, 3 * scale, 0, 2 * Math.PI);
+ ctx.moveTo(x, y - length * scale);
+ ctx.arc(x, y - length * scale, 3 * scale, 0, 2 * Math.PI);
+ ctx.fill();
+  // ctx.fill();
+}
+
+function drawArrow(ctx, x, y, scale, disc, length,a,b,c) {
+  // alert("ctx"+ ctx +"x"+ x +"y"+ y +"scale"+ scale +"disc"+ disc +"length"+ length +"ctx"+ ctx  );
+  const disc2=length-disc;
+  if (a) {
+    drawArrowhead(ctx, x - disc * scale, y, x - disc2 * scale, y, "black");
+  } else {
+   drawArrowhead(ctx, x - disc2 * scale, y, x - disc * scale, y, "black");  
+ }
+ if (b) {
+  drawArrowhead(ctx, x + disc * scale, y, x + disc2 * scale, y, "black");
+} else {
+ drawArrowhead(ctx, x + disc2 * scale, y, x + disc * scale, y, "black");  
+}
+if (c) {
+  drawArrowhead(ctx, x, y - disc * scale, x, y - disc2 * scale, "black");
+} else {
+ drawArrowhead(ctx, x, y - disc2 * scale, x, y - disc * scale, "black");  
+}
+}
+
+
+// Drag here text
+function dragHere(){
+
+      // Draw curved arrow
+      ctx.beginPath();
+      ctx.moveTo(800, 350);
+      ctx.quadraticCurveTo(750, 305, 690, 305);
+      ctx.lineWidth = 1;
+      ctx.strokeStyle = "brown";
+      ctx.stroke();
+      drawArrowhead(ctx, 800, 305, 690, 305, "brown");
+
+    // Add text
+    ctx.font = "20px Arial";
+    ctx.fillStyle = "brown";
+    ctx.textAlign = "center";
+    ctx.fillText("drag here!", 850, 360);
+  }
+</script>
+</body>
+</html>
