--- a/web/outofmath/subject.html
+++ b/web/outofmath/subject.html
@@ -24,7 +24,7 @@
                 强烈推荐刘海洋的《LaTeX入门》作为学习LaTeX的材料，几乎你想问的问题都在里面了！许多LaTeX中的问题不是能在网上简单看看就能搞懂的，我在打LaTeX时有许多卡住的地方就是靠着这本书撑过来的。
                 李文威教授的《<a href="http://www.wwli.url.tw/downloads/MW-2014-doc.pdf">数学写作漫谈</a>》谈论了一些提纲挈领的内容，也值得推荐。
             </p>
-            <p>最后，求问软件<a href="https://mathpix.com/">mathpix</a>的替代版本。。不想被割它韭菜。。</p>
+            <p>软件<a href="https://mathpix.com/">mathpix</a>的替代版本<a href="https://www.zhihu.com/question/338121218/answers/updated">P2T</a>可以试试。</p>
             <h3>功能，模板</h3>
             <p>在这里推荐两位老师的模板，两位老师都在网上公开了LaTeX代码，并使用自己的代码完成了讲义的编写，所以可行度是相当高的。（别的模板可以参考<a href="http://www.LaTeXstudio.net/">LaTeX开源小屋</a>？不过我没怎么用过）当然，如果你对我的某个PDF感兴趣，也可以直接找我要LaTeX源文件。</p>
             <ul>
