--- a/index-Chi.html
+++ b/index-Chi.html
@@ -48,7 +48,14 @@
         <div class="rich_media_inner">
 
 
-            <p>去年新年愿望：把下图中的内容中的85%左右搞清楚，能在某一个点上有深入的理解(如今发现自己并没有做到)</p>
+            <p>主页待办事项:</p>
+            <ul>
+                <li>搬运至GitHub(不知道何时个人主页就被学校关掉了)</li>
+                <li>多语言支持(想学习<a href="https://ctf-wiki.org/contribute/translation/">fastapi 的处理方式</a>,但是目前还没时间搞)</li>
+                <li>学习下<a href="https://syntopia.github.io/Polytopia/polytopes.html">polytopes</a>里面的"click to activate"模式</li>
+                <li></li>
+                <li></li>
+            </ul>
             <img src="images/modularform.jpg" />
 
         </div>
