--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -77,10 +77,12 @@
                 <li><a href="http://brauer.maths.qmul.ac.uk/Atlas/v3/">有限群的表示</a></li>
                 <li><a href="http://ringtheory.herokuapp.com/">环论</a></li>
                 <li><a href="https://www.mas.ncl.ac.uk/graph-curvature/">图上的曲率</a></li>
+                <li><a href="https://www.malinc.se/m/ImageTiling.php">hyperbolic tilings</a>, <a href="https://www.malinc.se/noneuclidean/en/poincaretiling.php">draggable hyperbolic tilings</a></li>
                 <li><a href="https://roywilliams.github.io/play/js/sl2z/">上半平面上SL_2(Z)作用的轨道</a></li>
                 <li><a href="https://www.lmfdb.org/">L函数、模形式、代数数论</a></li>
                 <li><a href="https://superficie.info/">代数曲面</a>、<a href="https://www.grassmannian.info/">Grassman流形</a>、<a href="https://www.fanography.info/">Fano簇</a>、<a href="https://www.hyperkaehler.info/">hyperkähler簇</a>、<a href="https://mgnbar.info/">模空间</a></li>
                 <li><a href="https://www.jgibson.id.au/lievis/">Lie代数相关</a></li>
+                <li><a href="http://www.liegroups.org/web/atlasInput.html">实/复李群相关</a>，也可以查看软件<a href="http://www.liegroups.org/web/">Atlas software</a></li>
                 <li><a href="http://www.grdb.co.uk/forms/k3">K3曲面</a></li>
                 <li><a href="http://smf.compositio.nl/">Siegel模形式</a>(of deg 2 and 3)</li>
                 <li><a href="https://web.math.pmf.unizg.hr/~duje/">高秩椭圆曲线记录</a></li>
@@ -105,6 +107,7 @@
                 <li><a href="https://zhuanlan.zhihu.com/p/77119428">判别式</a></li>
             </ul>
             <p>一些数学相关程序</p>
+            <!-- https://www.zhihu.com/question/317045847/answer/645246045 -->
             <ul>
                 <li><a href="https://www.sagemath.org/">sage</a>: 有网页版<a href="https://cocalc.com/">CoCalc</a>。</li>
                 <li><a href="http://www2.macaulay2.com/Macaulay2/">macauly2</a>:交换代数与代数几何，同样有<a href="https://www.unimelb-macaulay2.cloud.edu.au/#home">网页版</a></li>
@@ -156,11 +159,11 @@
                 <li><a href="https://pad.riseup.net/p/mathlinksbonn">Bonn讲义</a></li>
                 <li><a href="https://www.imaginary.org/snapshots">snapshots</a>:带图片的科普文章</li>
                 <li><a href="https://www.timo-keller.de/dokuwiki/KleineAG.html">Kleine AG</a>:介绍代数几何中的一些小主题。</li>
+                <li><a href="https://sites.google.com/view/ifssydney/home">Informal Friday Seminar in Sydney</a></li>
                 <li>知乎上的推荐<a href="https://www.zhihu.com/question/38253477/answer/287259056">讲义</a></li>
                 <li>stackexchange上的推荐<a href="https://math.stackexchange.com/questions/302023/best-sets-of-lecture-notes-and-articles">Lecture Notes</a></li>
                 <li>这是陳誼廷先生主页上的<a href="http://web.evanchen.cc/coursework.html">Course Notes</a>。令人佩服的是，他还在创作一个关于大学数学科普而不失严谨的综述：<a href="http://web.evanchen.cc/napkin.html">The Napkin project</a>。</li>
                 <li>Robert C. Rhoades的个人主页上的<a href="http://math.stanford.edu/~rhoades/NOTES/notes.html">讲义</a>。<a href="http://math.stanford.edu/~rhoades/FILES/"></a>还有Zev Chonoles的<a href="http://math.uchicago.edu/~chonoles/expository-notes/l">讲义</a></li>
-                <li>熊锐学长的主页上的<a href="https://www.cnblogs.com/XiongRuiMath/category/1210872.html">中文讲义</a></li>
             </ul>
             <!--
             <p>
