--- a/web/main/link.html
+++ b/web/main/link.html
@@ -325,6 +325,7 @@
                         <ul>
                             <li><a href="https://ecampus.uni-bonn.de/goto_ecampus_cat_2897979.html">eCampus</a></li>
                             <li><a href="https://basis.uni-bonn.de/qisserver/rds?state=wtree&search=1&trex=step&root120231=278654%7C276489%7C278475">Basis</a></li>
+                            <li><a href="https://www.studienservice.uni-bonn.de/">Student service</a></li>
                             <li><a href="https://www.uni-bonn.de/en/studying/international-students/learning-german/sdk">German course</a></li> 
                             <li><a href="https://mail.uni-bonn.de/">Bonn email</a></li>
                             ---------------------------------------------------------------
