--- a/web/main/recommend.html
+++ b/web/main/recommend.html
@@ -163,26 +163,14 @@
                 <li>知乎上的推荐<a href="https://www.zhihu.com/question/38253477/answer/287259056">讲义</a></li>
                 <li>stackexchange上的推荐<a href="https://math.stackexchange.com/questions/302023/best-sets-of-lecture-notes-and-articles">Lecture Notes</a></li>
                 <li>这是陳誼廷先生主页上的<a href="http://web.evanchen.cc/coursework.html">Course Notes</a>。令人佩服的是，他还在创作一个关于大学数学科普而不失严谨的综述：<a href="http://web.evanchen.cc/napkin.html">The Napkin project</a>。</li>
-                <li>Robert C. Rhoades的个人主页上的<a href="http://math.stanford.edu/~rhoades/NOTES/notes.html">讲义</a>。<a href="http://math.stanford.edu/~rhoades/FILES/"></a>还有Zev Chonoles的<a href="http://math.uchicago.edu/~chonoles/expository-notes/l">讲义</a></li>
+                <li>Robert C. Rhoades的个人主页上的<a href="http://math.stanford.edu/~rhoades/NOTES/notes.html">讲义</a>。</li>
             </ul>
-            <!--
-            <p>
-                以下是各个大学（除第一个）的课程栏，讲义自查。
-            </p>
-            <ul>
-                <li><a href="http://www.numbertheory.org/ntw/lecture_notes.html">数论</a></li>
-                <li><a href="https://ocw.mit.edu/courses/mathematics/">MIT 公开课</a></li>
-                <li><a href="http://www.math.cuhk.edu.hk/undergraduates/courses">香港中文大学</a></li>
-                <li><a href="https://elo.mastermath.nl/">Mastermath数学联合课程</a></li>
-            </ul>
-        -->
 
         <h2>教材</h2>
         <img src="http://home.ustc.edu.cn/~xx352229/images/images/function.PNG" class="right" />
         <p>这里是别人推荐的教材，一并列在下面。你还可以看看关于<a href="../mathintro/advice.html">前辈的修课建议</a>和<a href="../mathintro/jichu.html">我的建议</a></p>
         <ul>
             <li><a href="http://home.ustc.edu.cn/~xx352229/Download/pdf/latex/math/recommended%20books.pdf">上古学长给学弟学妹的建议</a></li>
-            <li><a href="https://www.oiegg.com/viewthread.php?tid=1274518">数学书单推荐</a></li>
             <li>理论物理方向的？<a href="http://tieba.baidu.com/p/3393334309?referer=m.baidu.com&red_tag=y2494089998">献给想提高逼格的物理学子之进阶数学教材推荐</a></li>
         </ul>
 
